--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "boostrap": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,5 +48,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "proxy":"http://localhost:8800/api/"
 }
