--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "boostrap": "^2.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -49,5 +50,5 @@
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "tailwindcss": "^3.3.3"
   },
-  "proxy":"http://localhost:8800/api/"
+  "proxy": "http://localhost:8800/api/"
 }
