--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.175",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
