--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "avatar-builder": "^1.0.2",
+    "avatar-initials": "^6.0.0",
     "axios": "^1.6.2",
     "boostrap": "^2.0.0",
+    "gravatar": "^1.8.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
